Removed unit test strings with "foo/bar" and replaced with unit test specific replacements.